[gd_scene load_steps=12 format=2]

[ext_resource path="res://templates/Objects/Doors/Doors.gd" type="Script" id=1]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0006.png" type="Texture" id=2]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0002.png" type="Texture" id=3]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0000.png" type="Texture" id=4]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0004.png" type="Texture" id=5]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0005.png" type="Texture" id=6]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0007.png" type="Texture" id=7]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0001.png" type="Texture" id=8]
[ext_resource path="res://Art/world/Doors/OpeningAnimation/jump_platform_v_frame0003.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 8 )

[node name="Doors" type="Area2D"]
script = ExtResource( 1 )

[node name="Door" type="AnimatedSprite" parent="."]
position = Vector2( 64, 0 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 36, 0 )
shape = SubResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 1.0
margin_top = -23.0
margin_right = 53.0
margin_bottom = -9.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Doors_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Doors_body_exited"]
[connection signal="animation_finished" from="Door" to="." method="_on_Door_animation_finished"]
